Fixes #9 make login link visible again.

--- a/public/css/sass-modules/_header.scss
+++ b/public/css/sass-modules/_header.scss
@@ -15,7 +15,10 @@ body > header {
                 display: inline-block;
             }
             &-utilityBar {
-                position: relative;
+                display: inline-block;
+                position: absolute;
+                    right: .5rem;
+                    top: .5rem;
 
                 nav {
                     float: right;
